fix: persist chat image object keys